# SudoDEM

./: .gitignore  INSTALL  Readme.md  testprint.py
.github/workflows/: Release.yml  SudoDEM2DRelease.yml  SudoDEM2Dbuild.yml  SudoDEM3Dbuild.yml  SudoDEM3Drelease.yml  buildSudoDEM2D.yml  buildSudoDEM3D.yml  buildtest.yml
SudoDEM2D/: CMakeLists.txt  CMakeLists.txt.py2_qt4.bak
SudoDEM2D/cMake/: FindCholmod.cmake  FindMetis.cmake  FindNumPy.cmake  FindPythonModule.cmake
SudoDEM2D/core/: Body.cpp  Body.hpp  BodyContainer.cpp  BodyContainer.hpp  Bound.hpp  Cell.cpp  Cell.hpp  Clump.cpp  Clump.hpp  DisplayParameters.hpp  ForceContainer.hpp  FrontEnd.hpp  Functor.hpp  GLConfig.hpp  GlobalEngine.hpp  IPhys.hpp  Interaction.cpp  Interaction.hpp  Material.cpp  Material.hpp  Omega.cpp  Omega.hpp  PartialEngine.hpp  Scene.cpp  Scene.hpp  SimulationFlow.cpp  SimulationFlow.hpp  State.cpp  State.hpp  ThreadRunner.cpp  ThreadRunner.hpp  ThreadWorker.cpp  TimeStepper.hpp  Timing.hpp  corePlugins.cpp
SudoDEM2D/core/main/: sudodem.cpp
SudoDEM2D/gui/: CMakeLists.txt  CMakeLists.txt.py2_qt4.bak
SudoDEM2D/gui/qt4/: GLViewer.cpp  Inspector.py  SerializableEditor.py  __init__.py  img_rc.py  ui_controller.py
SudoDEM2D/gui/qt5/: GLViewer.cpp  GLViewer.hpp  GLViewerDisplay.cpp  GLViewerMouse.cpp  Inspector.py  SerializableEditor.py  _GLViewer.cpp  __init__.py  controller.ui  img.qrc
SudoDEM2D/lib/base/: Math.cpp  Math.hpp  openmp-accu.hpp
SudoDEM2D/lib/factory/: DynLibManager.cpp  Factorable.hpp
SudoDEM2D/lib/import/: STLReader.hpp
SudoDEM2D/lib/multimethods/: FunctorWrapper.hpp  Indexable.hpp
SudoDEM2D/lib/multimethods/loki/: SmallObj.h
SudoDEM2D/lib/opengl/: GLUtils.cpp  GLUtils.hpp  OpenGLWrapper.hpp
SudoDEM2D/lib/pyutil/: README  doc_opts.hpp  gil.cpp  gil.hpp  numpy_boost.hpp  raw_constructor.hpp
SudoDEM2D/lib/serialization/: Serializable.hpp
SudoDEM2D/pkg/common/: Aabb.cpp  Aabb.hpp  Collider.cpp  Disk.cpp  Disk.hpp  Dispatching.cpp  Dispatching.hpp  ElastMat.hpp  FieldApplier.hpp  ForceEngine.cpp  ForceEngine.hpp  GLDrawFunctors.hpp  GravityEngines.cpp  GravityEngines.hpp  InsertionSortCollider.cpp  InsertionSortCollider.hpp  InteractionLoop.cpp  MatchMaker.hpp  NormShearPhys.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  ParallelEngine.cpp  ParallelEngine.hpp  PyRunner.hpp  StepDisplacer.hpp  TorqueEngine.hpp  Wall.cpp  Wall.hpp  common.cpp
SudoDEM2D/pkg/dem/: ElasticContactLaw.cpp  ElasticContactLaw.hpp  FrictPhys.cpp  FrictPhys.hpp  Ig2_Basic_ScGeom.cpp  Ig2_Basic_ScGeom.hpp  NewtonIntegrator.cpp  NewtonIntegrator.hpp  PeriTriaxial.cpp  PeriTriaxial.hpp  ScGeom.cpp  ScGeom.hpp  Shop.hpp  Shop_01.cpp  Superellipse.cpp  Superellipse.hpp  Superellipse_Ig2.cpp  Superellipse_Ig2.hpp
SudoDEM2D/py/: CMakeLists.txt  WeightedAverage2d.cpp  __init__.py.in  _extraDocs.py  _polyhedra_utils.cpp  _superellipse_utils.cpp  _utils.cpp  geom.py  params.py  plot.py  polyhedra_utils.py  svgobjects.cpp  svgobjects.hpp  system.py  timing.py  utils.py  utilspost.py  ymport.py
SudoDEM2D/py/deprecated/: bodiesHandling.py  config.py.in  export.py  linterpolation.py  post2d.py
SudoDEM2D/py/pack/: _packObb.cpp  _packPredicates.cpp  _packSpheres.cpp  pack.py
SudoDEM2D/py/tests/: __init__.py  clump.py  cohesive-chain.py  core.py  engines.py  pbc.py  wrapper.py
SudoDEM2D/py/wrapper/: customConverters.cpp  sudodemWrapper.cpp
SudoDEM3D/: CMakeLists.txt  a.py
SudoDEM3D/cMake/: CombineSources.cmake  FindNumPy.cmake  FindOpenBlas.cmake  FindPythonModule.cmake  GetVersion.cmake
SudoDEM3D/core/: Body.hpp  BodyContainer.cpp  BodyContainer.hpp  Bound.hpp  Cell.cpp  Cell.hpp  Clump.cpp  Clump.hpp  Dispatcher.hpp  EnergyTracker.hpp  Engine.hpp  FileGenerator.cpp  FileGenerator.hpp  ForceContainer.hpp  IGeom.hpp  Interaction.cpp  Interaction.hpp  InteractionContainer.cpp  InteractionContainer.hpp  Material.hpp  Scene.cpp  Scene.hpp  Shape.hpp  State.cpp  State.hpp  ThreadWorker.hpp
SudoDEM3D/core/main/: pyboot.cpp  sudodem.cpp  sudodemcfg.h.in
SudoDEM3D/gui/: CMakeLists.txt
SudoDEM3D/gui/qt4/: GLViewer.cpp  GLViewer.hpp  GLViewerDisplay.cpp  GLViewerMouse.cpp  Inspector.py  OpenGLManager.cpp  SerializableEditor.py  YZX.xpm  __init__.py  build  img_rc.py  ui_controller.py
SudoDEM3D/gui/qt5/: GLViewer.cpp  GLViewer.hpp  Inspector.py  OpenGLManager.hpp  SerializableEditor.py  Thumbs.db  XYZ.xpm  ZXY.xpm  _GLViewer.cpp  __init__.py  controller.ui  img.qrc  sudodem-favicon.xpm
SudoDEM3D/lib/QGLViewer/: camera.h
SudoDEM3D/lib/base/: Logging.hpp  Math.hpp  Singleton.hpp
SudoDEM3D/lib/factory/: ClassFactory.cpp  ClassFactory.hpp  DynLibManager.hpp
SudoDEM3D/lib/multimethods/: DynLibDispatcher.hpp
SudoDEM3D/lib/opengl/: GLUtils.cpp  GLUtils.hpp  OpenGLWrapper.hpp
SudoDEM3D/lib/pyutil/: numpy.hpp
SudoDEM3D/lib/serialization/: ObjectIO.hpp  Serializable.cpp  Serializable.hpp
SudoDEM3D/lib/smoothing/: LinearInterpolate.hpp  WeightedAverage2d.hpp
SudoDEM3D/pkg/common/: Aabb.cpp  Aabb.hpp  BoundaryController.hpp  Box.cpp  Box.hpp  Callbacks.hpp  Collider.cpp  Collider.hpp  CylScGeom6D.hpp  Dispatching.cpp  Dispatching.hpp  ElastMat.hpp  Facet.cpp  Facet.hpp  ForceEngine.cpp  ForceEngine.hpp  ForceResetter.hpp  Gl1_NormPhys.cpp  Gl1_NormPhys.hpp  MatchMaker.cpp  (+20 more)
SudoDEM3D/py/: CMakeLists.txt  __init__.py.in  _extraDocs.py  _fem_utils.cpp  _gjkparticle_utils.cpp  _superquadrics_utils.cpp  _utils.cpp  geom.py  plot.py  runtime.py  snapshot.py  system.py  timing.py  utils.py  utilspost.py  ymport.py
SudoDEM3D/py/wrapper/: customConverters.cpp  sudodemWrapper.cpp
examples/SudoDEM2D/: packingEllipses.py  periBiax_disk.py  periConsol_disk.py  periConsol_ell.py  periSimpleShear_disk.py  testBC.py  test_sp2.py
examples/SudoDEM3D/: cubesliding.py  example0.py  example1.py  example2_consol.py  example2_shear.py  example3.py  example4.py
scripts/: HowToUseScripts.md  changerpath.sh  firstCompile.sh  firstCompile_SudoDEM2D.sh  firstCompile_SudoDEM3D.sh  install3rd_base.sh  install3rdcore_sudosimlab.sh  install3rdcore_ubuntu20.04.sh  install3rdlibs.sh  install3rdlibs_sudosimlabServer.sh
(+92 files in other folders)
