IF(${ENABLE_GUI})
  SET(CMAKE_AUTOMOC ON)
  INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR})
  MESSAGE(STATUS "QGLHEADER: ${QGLVIEWER_INCLUDE_DIR}")
  SET(_GLViewer_SOURCE_FILES qt5/GLViewer.cpp;qt5/_GLViewer.cpp;qt5/OpenGLManager.cpp;qt5/GLViewerDisplay.cpp;qt5/GLViewerMouse.cpp)


  ADD_LIBRARY(_GLViewer SHARED ${_GLViewer_SOURCE_FILES})
  SET_TARGET_PROPERTIES(_GLViewer PROPERTIES PREFIX "" INSTALL_RPATH "$ORIGIN;$ORIGIN/../../../../3rdlibs;")

  TARGET_LINK_LIBRARIES(_GLViewer Qt5::Widgets Qt5::Xml Qt5::OpenGL ${GLUT_LIBRARY} ${OPENGL_LIBRARY} ${QT_LIBRARIES} ${QGLVIEWER_LIBRARIES} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})

  IF(GL2PS_FOUND AND ENABLE_GL2PS)
    TARGET_LINK_LIBRARIES(_GLViewer ${GL2PS_LIBRARIES})
  ENDIF(GL2PS_FOUND AND ENABLE_GL2PS)

  INSTALL(TARGETS _GLViewer DESTINATION ${SUDODEM_PY_PATH}/sudodem/qt)

  FILE(GLOB filesPYQT "${CMAKE_CURRENT_SOURCE_DIR}/qt5/*.py")
  INSTALL(FILES ${filesPYQT} DESTINATION ${SUDODEM_PY_PATH}/sudodem/qt)

  MESSAGE(STATUS "Python3 is used in the GUI")
  SET(ENV{PYTHONPATH} "${CMAKE_SOURCE_DIR}/../3rdlib/HeaderLib/lib/py")

  EXECUTE_PROCESS(
            COMMAND "${CMAKE_SOURCE_DIR}/../SudoDEMTools/PyQt5/bin/pyrcc5" "-o" "${CMAKE_BINARY_DIR}/img_rc.py" "img.qrc"
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/qt5
            RESULT_VARIABLE rv
            )

  EXECUTE_PROCESS(
            COMMAND "${CMAKE_SOURCE_DIR}/../SudoDEMTools/PyQt5/bin/pyuic5" "-o" "${CMAKE_BINARY_DIR}/ui_controller.py" "controller.ui"
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/qt5
            RESULT_VARIABLE rv
            )

  INSTALL(FILES ${CMAKE_BINARY_DIR}/img_rc.py ${CMAKE_BINARY_DIR}/ui_controller.py  DESTINATION ${SUDODEM_PY_PATH}/sudodem/qt)
ENDIF(${ENABLE_GUI})
